Add nav sections, Pages separation

--- a/src/components/BottleMessage/BottleMessage.sass
+++ b/src/components/BottleMessage/BottleMessage.sass
@@ -17,15 +17,16 @@
   background-size: 140%
 
   > p
+    font-weight: 600
     width: 80%
-    font-size: 2rem
+    font-size: 2.4rem
     text-align: center
     color: $purple
 
   &__Buttons
     width: 350px
     height: 200px
-    margin-top: 40px
+    margin-top: 30px
     position: relative
 
   &__Button
