--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,8 @@
 */
 
 * {
-  font-family: "Somatic";
+  /*font-family: "Typo Grotesk Rounded";*/
+  font-family: "Rimouski";
   box-sizing: border-box;
 }
 
